Update on search

--- a/Labs/raytracer/Makefile
+++ b/Labs/raytracer/Makefile
@@ -1,4 +1,4 @@
-FILE=photonMap
+FILE=skeleton
 
 ########
 #   Directories
@@ -12,7 +12,7 @@ EXEC=$(B_DIR)/$(FILE)
 # default build settings
 CC_OPTS=-c -pipe -Wall -Wno-switch -ggdb -g3
 LN_OPTS=
-CC=g++
+CC=mpiCC
 
 ########
 #       SDL options
@@ -35,7 +35,7 @@ OBJ = $(B_DIR)/$(FILE).o
 ########
 #   Objects
 $(B_DIR)/$(FILE).o : $(S_DIR)/$(FILE).cpp $(S_DIR)/SDLauxiliary.h $(S_DIR)/TestModelH.h
-	$(CC) $(CC_OPTS) -o $(B_DIR)/$(FILE).o $(S_DIR)/$(FILE).cpp $(SDL_CFLAGS) $(GLM_CFLAGS) -Ofast -ffloat-store
+	$(CC) $(CC_OPTS) -o $(B_DIR)/$(FILE).o $(S_DIR)/$(FILE).cpp $(SDL_CFLAGS) $(GLM_CFLAGS) -Ofast -ffloat-store -xHost
 
 
 ########
