--- a/Labs/raytracer/Makefile
+++ b/Labs/raytracer/Makefile
@@ -1,4 +1,4 @@
-FILE=skeleton
+FILE=photonMap
 
 ########
 #   Directories
@@ -12,7 +12,7 @@ EXEC=$(B_DIR)/$(FILE)
 # default build settings
 CC_OPTS=-c -pipe -Wall -Wno-switch -ggdb -g3
 LN_OPTS=
-CC=mpiCC
+CC=g++
 
 ########
 #       SDL options
